--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,41 @@ html {
   box-sizing: inherit;
 }
 
+.exchangeRate__list{
+  list-style: none;
+  align-self: center;
+  padding: 20px;
+  border-radius: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: white;
+  background-color: black;
+}
+.exchangeRate__wraper{
+  display: flex;
+  flex-direction: column;
+}
+.gold__price{
+	width: 360px;
+	display: block;
+	margin: 25px auto;
+}
+.list__item{
+  align-self: center;
+  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.poweredBy{
+	text-align: center;
+	display: none;
+}
+.table{
+	display: block;
+	margin: 0 auto;
+	width: 350px;
+  height: 275px;
+  margin-top: 20px;
+}
