--- a/css/main.css
+++ b/css/main.css
@@ -317,19 +317,32 @@ html {
   -webkit-box-sizing: inherit;
           box-sizing: inherit; }
 
+.cinkciarz_wraper {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
 .exchangeRate__list {
-  width: 350px;
   list-style: none;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   padding: 20px;
-  margin-top: 0;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 15px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 1.125rem;
+  font-weight: 600;
   color: white;
   background-color: black; }
 
@@ -340,11 +353,7 @@ html {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column;
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-  margin-top: 0; }
+          flex-direction: column; }
 
 .gold__price {
   width: 360px;
@@ -368,7 +377,7 @@ html {
   display: block;
   margin: 0 auto;
   width: 350px;
-  height: 270px;
+  height: 275px;
   margin-top: 20px; }
 
 /*# sourceMappingURL=main.css.map */
