--- a/css/main.css
+++ b/css/main.css
@@ -380,4 +380,8 @@ html {
   height: 275px;
   margin-top: 20px; }
 
+#count {
+  font-weight: 600;
+  font-size: 14px; }
+
 /*# sourceMappingURL=main.css.map */
